Lightning Alternatives to JavaScript Buttons/Discover Lightning Web Component Actions/force-app/main/default/objects/Test_User__c/Test_User__c.object-meta.xml
<CustomObject>
    <label>Test User</label>
    <nameField>
        <label>Test User Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Test Users</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>