Lightning Alternatives to JavaScript Buttons/Discover Lightning Web Component Actions/force-app/main/default/objects/Test_User__c/fields/Case_Study__c.field-meta.xml
<CustomField>
    <fullName>Case_Study__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case Study</label>
    <referenceTo>Case_Study__c</referenceTo>
    <relationshipLabel>Test Users</relationshipLabel>
    <relationshipName>Test_Users</relationshipName>
    <type>Lookup</type>
</CustomField>