Lightning Alternatives to JavaScript Buttons/Discover Lightning Web Component Actions/force-app/main/default/objects/Test_User__c/fields/Nickname__c.field-meta.xml
<CustomField>
    <fullName>Nickname__c</fullName>
    <label>Nickname</label>
    <length>20</length>
    <type>Text</type>
</CustomField>