Lightning Alternatives to JavaScript Buttons/Discover Lightning Web Component Actions/force-app/main/default/objects/Test_User__c/fields/Password__c.field-meta.xml
<CustomField>
    <fullName>Password__c</fullName>
    <label>Password</label>
    <length>20</length>
    <type>Text</type>
</CustomField>